widget_derive/tests/ui/declare/if_guard_fail.stderr
error: if guard is not supported in `id`
  --> tests/ui/declare/if_guard_fail.rs:23:10
   |
23 |       id if true => : test,
   |          ^^^^^^^

error: Depends on a widget field which behind `if guard`, its existence depends on the `if guard` result in runtime.
  --> tests/ui/declare/if_guard_fail.rs:40:17
   |
40 |         margin: a.margin
   |                 ^^^^^^^^
   |
warning: field define here.
  --> tests/ui/declare/if_guard_fail.rs:34:11
   |
34 |       id: a,
   |           ^
35 |       size: Size::zero(),
36 |       margin if true =>:  EdgeInsets::all(0.),
   |       ^^^^^^ ^^^^^^^
